--- a/excel/app.html
+++ b/excel/app.html
@@ -39,6 +39,29 @@
 
       var Excel = React.createClass({
         displayName :'Excel',
+        preSearchData :null,
+        _save : function(e){
+          e.preventDefault();
+          var input = e.target.firstChild;
+          var data = this.state.data.slice();
+
+          data[this.state.edit.row][this.state.edit.cell] = input.value;
+
+          this.setState({
+            edit: null, 
+            data: data,
+          });
+        },
+        _showEditor: function(e){
+            console.log('parseInt(e.target.dataset.row, 10): ', parseInt(e.target.dataset.row, 10))
+            console.log('e.target.cellIndex: ', e.target.cellIndex)
+            this.setState({
+                edit: {
+                  row: parseInt(e.target.dataset.row, 10),
+                  cell: e.target.cellIndex,
+                }
+            })
+        },
         _sort: function(e){
             var col = e.target.cellIndex ;
             var data = this.state.data.slice();
@@ -61,33 +84,108 @@
                 descending: descending,
             })
         },
+        _toggleSearch: function(){
+          console.log('_toggleSearch ')
+          console.log('this.state.search:  ', this.state.search)
+          if(this.state.search){
+            this.setState({
+              data: this._preSearchData,
+              search: false,
+            })
+          } else {
+            console.log('_toggleSearch -> else')
+            this._preSearchData = this.state.data;
+            this.setState ({
+              search: true,
+            })
+          }
+        },
         getInitialState: function() {
           return {
             data: this.props.initalData,
             descending: true,
             sortBy: 0,
+            edit: null,
+            search: false,
           };
         },
-        render: function() {
-          return React.DOM.div(null,
-            React.DOM.table(null, 
+        _renderToolbar : function(){
+          return React.DOM.button(
+            {
+              onClick: this._toggleSearch,
+              className: 'toolbar',
+            },
+            'search'
+          )
+        },
+        _search: function(e){
+          var needle = e.target.value.toLowerCase();
+          if(!needle) {
+            this.setState({data: this._preSearchData});
+            return ;
+          }
+          var searchIndex = e.target.dataset.idx;
+          var searchdata = this._preSearchData.filter(function(row){
+            return row[searchIndex].toString().toLowerCase().indexOf(needle) > -1;
+          })
+          this.setState({data: searchdata});
+        },
+        _renderSearch : function(){
+          if(!this.state.search){
+            return null;
+          }
+          return React.DOM.tr({onChange: this._search,},
+            this.props.headers.map(function(_ignore, index){
+              return React.DOM.td({key: index}, 
+                React.DOM.input({
+                  type: 'text',
+                  'data-idx': index,
+                })
+              )
+            })
+          )
+        },
+        _renderTable : function(){
+            return React.DOM.table(null, 
                 React.DOM.thead({onClick: this._sort}, 
                     React.DOM.tr(null, 
                         this.props.headers.map(function(title ,index){
+                            if( this.state && this.state.sortBy === index) {
+                              title += this.state.descending ? '\u2191' : '\u2193'
+                            }
                             return React.DOM.th({key: index}, title)
-                        })
+                        }, this)
                     )
                 ),
-                React.DOM.tbody(null, 
-                    this.state.data.map(function(row ,index){
-                        return React.DOM.tr({key: index},
+                React.DOM.tbody({onDoubleClick: this._showEditor}, 
+                    this._renderSearch(),
+                    this.state.data.map(function(row ,rowIndex){
+                        return React.DOM.tr({key: rowIndex},
                             row.map(function(cell, index){
-                                return React.DOM.td({key:index}, cell);
-                            })
+                              var edit = this.state.edit;
+                              var content = cell;
+
+                              if(edit && edit.row === rowIndex && edit.cell === index){
+                                content = React.DOM.form({onSubmit: this._save}, 
+                                  React.DOM.input({
+                                    type: 'text',
+                                    defaultValue: content,
+                                  })
+                                );
+                              } 
+
+                              return React.DOM.td({key:index, 'data-row': rowIndex}, content);
+
+                            }, this)
                         )
-                    })
+                    }, this)
                 )
             )
+        },
+        render: function() {
+          return React.DOM.div(null,
+            this._renderToolbar(),
+            this._renderTable()
           );
         }
       });
